fix max default logic, adjust z-index, fix tako face

--- a/static/style/deco.css
+++ b/static/style/deco.css
@@ -2,7 +2,7 @@
 .webBorder {
     position: fixed;
     background-image: linear-gradient(to right, #ccb693, #5b493f);
-    z-index: 3;
+    z-index: 30;
 }
 
 #webBorderTop, #webBorderBottom {
@@ -34,12 +34,12 @@
 
 .starWheel {
     position: fixed;
-    z-index: -1;
+    z-index: -10;
     border-radius: 50%;
 }
 
 #starWheelInner1Group {
-    z-index: 0;
+    z-index: -10;
     position: absolute;
     width: 700px;
     height: 700px;
@@ -52,7 +52,7 @@
 }
 
     #starWheelInner1 {
-        z-index: 0;
+        z-index: -10;
         width:100%;
         height:100%;
         position: relative;
@@ -66,7 +66,7 @@
 
         #starWheelInner1Star1 {
             position: absolute;
-            z-index: 1;
+            z-index: -5;
             bottom: -20px;
             width: 40px;
             height: 40px;
@@ -76,7 +76,7 @@
 
         #starWheelInner1Star2 {
             position: absolute;
-            z-index: 1;
+            z-index: -5;
             width: 15px;
             height: 15px;
             right: -7px;
@@ -85,7 +85,7 @@
         }
 
 #starWheelInner2 {
-    z-index: 0;
+    z-index: -10;
     width: 690px;
     height: 690px;
     top: -35px;
@@ -99,7 +99,7 @@
 }
 
 #starWheelOuter1Group {
-    z-index: 0;
+    z-index: -10;
     position: absolute;
     width: 900px;
     height: 900px;
@@ -112,7 +112,7 @@
 }
 
     #starWheelOuter1 {
-        z-index: 0;
+        z-index: -10;
         width:100%;
         height:100%;
         position: relative;
@@ -126,7 +126,7 @@
 
         #starWheelOuter1Star1 {
             position: absolute;
-            z-index: 1;
+            z-index: -5;
             right: -15px;
             width: 30px;
             height: 30px;
@@ -136,7 +136,7 @@
 
         #starWheelOuter1Star2 {
             position: absolute;
-            z-index: 1;
+            z-index: -5;
             top: -20px;
             width: 40px;
             height: 40px;
@@ -145,7 +145,7 @@
         }
 
 #starWheelOuter2Group {
-    z-index: 0;
+    z-index: -10
     position: fixed;
     width: 2000px;
     height: 2000px;
@@ -157,7 +157,7 @@
     animation-fill-mode: forwards;
 }
     #starWheelOuter2 {
-        z-index: 0;
+        z-index: -10;
         width:100%;
         height:100%;
         position: relative;
@@ -171,7 +171,7 @@
 
         #starWheelOuter2Star1 {
             position: absolute;
-            z-index: 1;
+            z-index: -5;
             width: 16px;
             height: 16px;
             right: -9px;
@@ -181,7 +181,7 @@
 
         #starWheelOuter2Star2 {
             position: absolute;
-            z-index: 1;
+            z-index: -5;
             width: 20px;
             height: 20px;
             top: -10px;
@@ -191,7 +191,7 @@
 
         #starWheelOuter2Star3 {
             position: absolute;
-            z-index: 1;
+            z-index: -5;
             top: -25px;
             width: 50px;
             height: 50px;
@@ -201,7 +201,7 @@
 
         #starWheelOuter2Star4 {
             position: absolute;
-            z-index: 1;
+            z-index: -5;
             width: 40px;
             height: 40px;
             bottom: -20px;
@@ -211,7 +211,7 @@
 
 
 #starWheelOuter3 {
-    z-index: 0;
+    z-index: -10;
     width: 1960px;
     height: 1960px;
     top: -480px;
@@ -274,7 +274,7 @@
     top: -470px;
     left: 0;
     background-color: #fffcf8;
-    z-index: 3;
+    z-index: 25;
     /* display: flex; */
     height: 370px;
 }
@@ -284,7 +284,7 @@
     height: 370px;
     width: 300px;
     background-color: #fffcf8;
-    z-index: 3;
+    z-index: 25;
     color: #9e8a71;
 }
 
@@ -297,7 +297,7 @@
     height: 100px;
     width: 20px;
     background-color: #8b79ac;
-    z-index: 3;
+    z-index: 25;
 }
 #bookmark:before {
     content: "";
