--- a/static/style/numberPointer.css
+++ b/static/style/numberPointer.css
@@ -1,7 +1,7 @@
 
 #numPointer {
     position: fixed;
-    z-index: 1;
+    z-index: 0;
     display: grid;
     align-items: center;
     justify-content: center;
@@ -18,6 +18,7 @@ body .pointerBody {
     /* transform: translateX(-100px); */
     left: 65px;
     bottom: 65px;
+    z-index: -2;
     box-shadow: 2px 2px 15px rgb(0,0,0,0.7);
 }
 body .pointerBody:before {
@@ -25,23 +26,12 @@ body .pointerBody:before {
     position: absolute;
     width: 6px;
     height: 6px;
-    background:  #a690d2;
+    background:  #000;
     border-radius: 100%;
     top: calc(50% - 3px);
     left: calc(50% - 3px);
-    animation: bubbling 3s linear infinite;
+    animation: bubblingRight 3s linear infinite;
     filter: blur(5px);
-}
-@keyframes bubbling {
-    0% {
-        box-shadow: 50px 150px 0 rgba(194, 174, 140, 0);
-    }
-    50% {
-        box-shadow: -100px 0px 0 #ccb693;
-    }
-    100% {
-        box-shadow: 50px -150px 0 rgba(194, 174, 140, 0);
-    }
 }
 
 
@@ -51,7 +41,7 @@ body .pointerBody.face .arms {
     position: absolute;
     left: -5px;
     top: 30px;
-    z-index: 0;
+    z-index: -1;
     border-radius: 50px;
 }
 body .pointerBody.face .arms .arm {
@@ -207,11 +197,13 @@ body .pointerBody.face .inner .glasses:after {
     display: grid;
     bottom: 0px;
     left: 0px;
+    z-index: -3;
 }
 
 #wineGlass > span {
     position: absolute;
     right: 8px;
+    z-index: -3;
 }
 
 .glass {
@@ -240,7 +232,6 @@ body .pointerBody.face .inner .glasses:after {
     border-radius: 0px 0px 50px 50px;
     /* border-radius: 0px 0px 50% 50%; */
     display: block;
-    z-index: -1;
     background-image: linear-gradient(to bottom, rgba(255,0,0, 0.5), rgb(255, 155, 0, 0.5));
 }
 .stem {
