--- a/static/style/star.css
+++ b/static/style/star.css
@@ -4,7 +4,7 @@ canvas {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -2;
+    z-index: -20;
 }
 
 a {
