--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -76,7 +76,7 @@ canvas {
     animation-fill-mode: forwards;
     position: fixed;
     top: 0;
-    z-index: 2;
+    z-index: 20;
 }
 
 #randomForm > input {
@@ -145,7 +145,7 @@ label[for=skip] {
     position: absolute;
     top: calc(25%);
     left: 0px;
-    z-index: 2;
+    z-index: 5;
     padding: 20px 0px;
     font-family: Pwchristmasstars;
 }
@@ -224,7 +224,7 @@ label[for=skip] {
     width: 100%;
     /* height: 240px; */
     position: absolute;
-    z-index: 2;
+    z-index: 10;
     bottom: 50px;
     /* bottom: 0px; */
     left: 0px;
@@ -265,7 +265,7 @@ label[for=skip] {
     text-align: center;
     font-family: serif;
     font-size: 15px;
-    z-index:3;
+    z-index:10;
     color:#b19d7e;
 }
 
@@ -279,38 +279,5 @@ label[for=skip] {
 #myFooter > a:active {
     text-decoration: none;
     color:#b19d7e;
-}
-
-.webBorder {
-    position: fixed;
-    background-image: linear-gradient(to right, #ccb693, #5b493f);
-    z-index: 1;
-}
-
-#webBorderTop, #webBorderBottom {
-    width: 100%;
-    height: 10px;
-    background-image: linear-gradient(to right,  #5b493f, #5b493f);
-}
-
-#webBorderLeft, #webBorderRight {
-    width: 10px;
-    height: 100%;
-    background-image: linear-gradient(to top, #5b493f, #ccb693, #5b493f);
-}
-
-#webBorderTop, #webBorderLeft {
-    top: 0px;
-    left: 0px;
-}
-
-#webBorderBottom {
-    bottom: 0px;
-    left: 0px;
-}
-
-#webBorderRight {
-    top: 0px;
-    right: 0px;
 }
 
